Creacion de botones

--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             <h2>Nuestros Cursos y Talleres</h2>
             <ul class="cursos-lista">
                 <li class="curso">
-                    <h4>Técnicas de Extracción de Café</h4>
-                    <p>Precio: <span>Gratis</span></p>
-                    <p>Cupo: <span>20</span></p>
+                    <h4 class="no-margin">Técnicas de Extracción de Café</h4>
+                    <p class="no-margin">Precio: <span>Gratis</span></p>
+                    <p class="no-margin">Cupo: <span>20</span></p>
                     <a href="cursos.html" class="btn btn-secundario">Más Información</a>
                 </li>
                 <li class="curso">
-                    <h4>4 Recetas de Café para principiantes</h4>
-                    <p>Precio: <span>Gratis</span></p>
-                    <p>Cupo: <span>20</span></p>
+                    <h4 class="no-margin">4 Recetas de Café para principiantes</h4>
+                    <p class="no-margin">Precio: <span>Gratis</span></p>
+                    <p class="no-margin">Cupo: <span>20</span></p>
                     <a href="cursos.html" class="btn btn-secundario">Más Información</a>
                 </li>
 
