--- a/index.html
+++ b/index.html
@@ -89,6 +89,19 @@
             </ul>
         </aside>
     </div>
+    <!--Contenido principal-->
+    <footer class="site-footer">
+        <div class="contenedor">
+            <div class="barra">
+                <p class="no-margin">Blog <span>DeCafé</span></p>
+                <nav class="navegacion">
+                    <a href="nosotros.html">Nosotros</a>
+                    <a href="cursos.html">Cursos</a>
+                    <a href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
