--- a/contacto.html
+++ b/contacto.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blog de Café</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|PT+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
     <header class="site-header">
@@ -22,26 +24,21 @@
                     <a href="cursos.html">Cursos</a>
                     <a href="contacto.html">Contacto</a>
                 </nav>
-            </div><!--barra-->
-
+            </div>
+            <!--Barra-->
             <div class="texto-header">
-                <h2 class="no-margin">Blog de Café con consejos y Cursos</h2>
+                <h2 class="no-margin">Blog de Café con consejos y cursos</h2>
                 <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
             </div>
-
-        </div><!--contenedor-->
+        </div>
+        <!--Contenedor-->
     </header>
-
-
-    
     <main class="contenedor">
-        <h2 class="centrar-texto">Contacto</h2>
-
+        <h2 class="centrar-texto">Contácto</h2>
         <div class="grid centrar-columnas">
             <div class="columnas-12">
-                <img src="img/contacto.jpg" alt="imagen contacto">
+                <img src="img/contacto.jpg" alt="Imagen Contacto">
             </div>
-
             <div class="columnas-10 formulario-contacto">
                 <form action="#">
                     <div class="campo">
@@ -52,7 +49,7 @@
                         <label for="email">E-Mail</label>
                         <input type="email" id="email" placeholder="Tu Correo Electrónico">
                     </div>
-                    <div class="campo mensaje">
+                    <div class="campo">
                         <label for="mensaje">Mensaje</label>
                         <textarea id="mensaje"></textarea>
                     </div>
@@ -62,15 +59,11 @@
                 </form>
             </div>
         </div>
-
     </main>
-
-
     <footer class="site-footer">
         <div class="contenedor">
             <div class="barra">
-                <p class="no-margin">Blog<span>DeCafé</span></p>
-
+                <p class="no-margin">Blog <span>DeCafé</span></p>
                 <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="cursos.html">Cursos</a>
@@ -79,5 +72,7 @@
             </div>
         </div>
     </footer>
+
 </body>
+
 </html>
